# Kori-Bot

./: .gitignore  LICENSE  README.md  autoinstall.py  requirements.txt
Kori-bot/: .env  autoinstall.py  bot.py  config.yml  help.py  install.py  ping.py  pyproject.toml  requirements.txt  requirements2.txt  start.sh
Kori-bot/ATRI/: service.py
Kori-bot/ATRI/plugins/funny/: data_source.py
Kori-bot/ATRI/plugins/manage/: __init__.py
Kori-bot/ATRI/plugins/util/: __init__.py
Kori-bot/ATRI/plugins/wife/: __init__.py
Kori-bot/data/: userscd.json
Kori-bot/data/errors/: 02nqi69Q.json  0MehFqyG.json  0Q53wLZ2.json  0b1Cnhpr.json  0s9gO42b.json  12FpzDMP.json  1D7ZaUyL.json  1GfCXvbr.json  1HQP8zWZ.json  1O3XFBLJ.json  1QmcMXql.json  1lcPoYEL.json  1rDqyE4e.json  1vXFy2hV.json  20h87pJC.json  2WB1bYXR.json  2aQ9dPmA.json  2kdGflpJ.json  2z79k3BX.json  30jzgvUu.json  34skGZaj.json  38er0fui.json  3GOZCIjb.json  3USomfdl.json  3meZKULF.json  4LaSJCkZ.json  4Mxt5sL0.json  4SlE9sDI.json  4rtJX7Cw.json  4swIPHrJ.json  51ZWoIwv.json  570KMOi6.json  5MlbBcaR.json  5OHGVckv.json  5f1aX4kr.json  5iMUQVtr.json  6C5zciyO.json  6FQXcixJ.json  7F9Aq2Vx.json  7fSDewn1.json  (+350 more)
Kori-bot/data/russian/: math_answer.json  russian_data.json  stock_price.txt  word_answer.json
Kori-bot/data/statistical/: _prefix_group_count.json  _prefix_user_count.json  plugin2cmd.json
Kori-bot/src/plugins/: broadcast.py  exceptions.py  help.py  jiwiki.py  ping.py  repo.py  service.py  trigger_memes_from_feiyucans_space.py
Kori-bot/src/plugins/help/: size  (+3 more)
Kori-bot/test001/: README.md  pyproject.toml
(+350 files in other folders)
